// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildModelTs > should output full model.ts 1`] = `
"// This file was generated by Nango
// It's recommended to commit it to your VCS

// ------ Models
export interface Sync1 {
  id: 'dfd'
};


export interface Action1 {
  name: 'dfd'
};
// ------ /Models


// ------ SDK
import { NangoSync as NangoSyncDefault, NangoAction as NangoActionDefault } from '@nangohq/sdk';

export type Models = {};

export type NangoSync = NangoSyncDefault<Models>;
export type NangoAction = NangoActionDefault<Models>;
// ------ /SDK


// ------ Flows
export const NangoFlows = [
  {
    \\"providerConfigKey\\": \\"foobar\\",
    \\"actions\\": [
      {
        \\"name\\": \\"Action1\\",
        \\"runs\\": \\"\\",
        \\"returns\\": [
          \\"Action1\\"
        ],
        \\"endpoints\\": [
          {
            \\"POST\\": \\"/default\\"
          }
        ],
        \\"layout_mode\\": \\"root\\",
        \\"models\\": [
          {
            \\"name\\": \\"Action1\\",
            \\"fields\\": [
              {
                \\"name\\": \\"name\\",
                \\"type\\": \\"dfd\\"
              }
            ]
          }
        ]
      }
    ],
    \\"syncs\\": [
      {
        \\"name\\": \\"Sync1\\",
        \\"runs\\": \\"\\",
        \\"returns\\": [
          \\"Sync1\\"
        ],
        \\"endpoints\\": [
          {
            \\"POST\\": \\"/default\\"
          }
        ],
        \\"layout_mode\\": \\"root\\",
        \\"models\\": [
          {
            \\"name\\": \\"Sync1\\",
            \\"fields\\": [
              {
                \\"name\\": \\"id\\",
                \\"type\\": \\"dfd\\"
              }
            ]
          }
        ]
      }
    ]
  }
] as const;
// ------ /Flows
"
`;

exports[`buildModelTs > should return empty 1`] = `
"// This file was generated by Nango
// It's recommended to commit it to your VCS

// ------ Models

// ------ /Models


// ------ SDK
import { NangoSync as NangoSyncDefault, NangoAction as NangoActionDefault } from '@nangohq/sdk';

export type Models = {};

export type NangoSync = NangoSyncDefault<Models>;
export type NangoAction = NangoActionDefault<Models>;
// ------ /SDK


// ------ Flows
export const NangoFlows = [] as const;
// ------ /Flows
"
`;

exports[`buildModelTs > should support [key: string] model 1`] = `
[
  "// This file was generated by Nango",
  "// It's recommended to commit it to your VCS",
  "",
  "// ------ Models",
  "export interface Sync1 {",
  "  [key: string]: string",
]
`;
